add task easy tabs

--- a/tasks/event/additional/index.html
+++ b/tasks/event/additional/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Counter Click - JavaScript Tasks</title>
+    <title>Event Additional - JavaScript Tasks</title>
 </head>
 <body>
 
     <div class="container">
-		<h1 class="text-center">Counter Click - JavaScript Tasks</h1>
+		<h1 class="text-center">Event Additional - JavaScript Tasks</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -23,30 +23,29 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Counter Click -->
+						<!-- Change Color Button -->
                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="counter_click.html">Counter Click</a>
+                                <a href="change_color_btn.html">Change Color Button</a>
                             </td>
                             <td>
-                                <img class="screenshot" src="../screenshots/counter_click.png" alt="">
+                                <img class="screenshot" src="../screenshots/change_color_btn.png" alt="">
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Counter Buttons -->
+						<!-- Insert Text -->
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="counter_buttons.html">Counter Buttons</a>
+                                <a href="insert_text.html">Insert Text</a>
                             </td>
                             <td>
-                                <img class="screenshot" src="../screenshots/counter_buttons.png" alt="">
+                                <img class="screenshot" src="../screenshots/insert_text.png" alt="">
                             </td>
                             <td></td>
                         </tr>
                     </tbody>
-                </thead>
             </table>
         </div>
     </div>
