--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -23,17 +23,6 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Change Color Button -->
-                        <tr>
-                            <td class="text-center">1</td>
-                            <td>
-                                <a href="change_color_btn.html">Change Color Button</a>
-                            </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/change_color_btn.png" alt="">
-                            </td>
-                            <td></td>
-                        </tr>
                         <!-- Change Bg Block -->
                         <tr>
                             <td class="text-center">2</td>
@@ -56,17 +45,6 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Insert Text -->
-                        <tr>
-                            <td class="text-center">4</td>
-                            <td>
-                                <a href="insert_text.html">Insert Text</a>
-                            </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/insert_text.png" alt="">
-                            </td>
-                            <td></td>
-                        </tr>
                         <!-- Open Modal -->
                         <tr>
                             <td class="text-center">5</td>
@@ -84,9 +62,19 @@
                             <td>
                                 <a href="counter_click/index.html">Counter Click</a>
                             </td>
-                            <td>
-                            </td>
+                            <td style="background-color: blue;"></td>
                             <td>папка</td>
+                        </tr>
+						<!-- Easy Tabs -->
+                         <tr>
+                            <td class="text-center">7</td>
+                            <td>
+                                <a href="easy_tabs.html">Easy Tabs</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/easy_tabs.png" alt="">
+                            </td>
+                            <td></td>
                         </tr>
                          <!-- Create Figures -->
                          <tr>
@@ -132,27 +120,25 @@
                             </td>
                             <td></td>
                         </tr>
-                         <!-- Random Color RGB -->
-                         <tr>
+                        <!-- Difficult Tasks -->
+                        <tr>
                             <td class="text-center">11</td>
                             <td>
-                                <a href="random_color_rgb.html">Random Color RGB</a>
+                                <a href="difficult/index.html">Difficult Tasks</a>
                             </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/random_color_rgb.png" alt="">
+                            <td style="background-color: red;">
                             </td>
-                            <td></td>
+                            <td>Сложные задачи</td>
                         </tr>
-                        <!-- Spinning Wheel -->
+						<!-- Additional Tasks -->
                         <tr>
-                            <td class="text-center">12</td>
+                            <td class="text-center">11</td>
                             <td>
-                                <a href="spinning_wheel.html">Spinning Wheel</a>
+                                <a href="additional/index.html">Additional Tasks</a>
                             </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/spinning_wheel.png" alt="">
+                            <td style="background-color: green;">
                             </td>
-                            <td></td>
+                            <td>Дополнительные задачи</td>
                         </tr>
                     </tbody>
             </table>
