--- a/tasks/event/additional/change_color_btn.html
+++ b/tasks/event/additional/change_color_btn.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
 	<title>Change Color Button - JavaScript Task</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col mx-auto">
 			<div class="screenshot-wrp">
-				<img src="screenshots/change_color_btn.png">
+				<img src="../screenshots/change_color_btn.png">
 			</div>
 		</div>
 	</div>
