--- a/tasks/event/difficult/index.html
+++ b/tasks/event/difficult/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Counter Click - JavaScript Tasks</title>
+    <title>Event Difficult - JavaScript Tasks</title>
 </head>
 <body>
 
     <div class="container">
-		<h1 class="text-center">Counter Click - JavaScript Tasks</h1>
+		<h1 class="text-center">Event Difficult - JavaScript Tasks</h1>
         <div class="row">
             <table class="table table-striped table-bordered table-hove">
                 <thead class="thead-dark">
@@ -23,30 +23,40 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Counter Click -->
-                        <tr>
+                         <!-- Random Color RGB -->
+                         <tr>
                             <td class="text-center">1</td>
                             <td>
-                                <a href="counter_click.html">Counter Click</a>
+                                <a href="random_color_rgb.html">Random Color RGB</a>
                             </td>
                             <td>
-                                <img class="screenshot" src="../screenshots/counter_click.png" alt="">
+                                <img class="screenshot" src="../screenshots/random_color_rgb.png" alt="">
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Counter Buttons -->
+                        <!-- Spinning Wheel -->
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="counter_buttons.html">Counter Buttons</a>
+                                <a href="spinning_wheel.html">Spinning Wheel</a>
                             </td>
                             <td>
-                                <img class="screenshot" src="../screenshots/counter_buttons.png" alt="">
+                                <img class="screenshot" src="../screenshots/spinning_wheel.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+						 <!-- Counter Square -->
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="counter_click_square.html">Counter Square</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="../screenshots/counter_square.png" alt="">
                             </td>
                             <td></td>
                         </tr>
                     </tbody>
-                </thead>
             </table>
         </div>
     </div>
