--- a/tasks/event/difficult/spinning_wheel.html
+++ b/tasks/event/difficult/spinning_wheel.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/style.css">
 	<title>Spinning Wheel - JavaScript Task</title>
 </head>
 <body>
     
-
 <div class="container">
 	<h1 class="text-center mt-3">Spinning Wheel - JavaScript Task</h1>
 	<div class="row">
 		<div class="col mx-auto">
 			<div class="screenshot-wrp">
-				<img src="screenshots/spinning_wheel.png">
+				<img src="../screenshots/spinning_wheel.png">
 			</div>
 		</div>
 	</div>
