add filter search bar

--- a/tasks/element/index.html
+++ b/tasks/element/index.html
@@ -67,6 +67,17 @@
                         </td>
                         <td></td>
                     </tr>
+					<!-- Filter Search Bar -->
+                    <tr>
+                        <td class="text-center">5</td>
+                        <td>
+                            <a href="random_photos.html">Filter Search Bar</a>
+                        </td>
+                        <td>
+                            <img class="screenshot" src="screenshots/filter_search_bar.png" alt="">
+                        </td>
+                        <td></td>
+                    </tr>
                 </tbody>   
             </table>
         </div>
