change filter search

--- a/tasks/element/index.html
+++ b/tasks/element/index.html
@@ -71,7 +71,7 @@
                     <tr>
                         <td class="text-center">5</td>
                         <td>
-                            <a href="random_photos.html">Filter Search Bar</a>
+                            <a href="filter_search_bar.html">Filter Search Bar</a>
                         </td>
                         <td>
                             <img class="screenshot" src="screenshots/filter_search_bar.png" alt="">
