--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -56,9 +56,20 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Counter Click -->
+						<!-- Show Message -->
                         <tr>
                             <td class="text-center">6</td>
+                            <td>
+                                <a href="show_message.html">Show Message</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/show_message.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Counter Click -->
+                        <tr>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="counter_click/index.html">Counter Click</a>
                             </td>
@@ -67,7 +78,7 @@
                         </tr>
 						<!-- Easy Tabs -->
                          <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="easy_tabs.html">Easy Tabs</a>
                             </td>
@@ -78,7 +89,7 @@
                         </tr>
                          <!-- Create Figures -->
                          <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">9</td>
                             <td>
                                 <a href="create_figures.html">Create Figures</a>
                             </td>
@@ -89,7 +100,7 @@
                         </tr>
                         <!-- Change Size Circle -->
                         <tr>
-                            <td class="text-center">8</td>
+                            <td class="text-center">10</td>
                             <td>
                                 <a href="change_size_circle.html">Change Size Circle</a>
                             </td>
@@ -100,7 +111,7 @@
                         </tr>
                         <!-- Move Circles -->
                         <tr>
-                            <td class="text-center">9</td>
+                            <td class="text-center">11</td>
                             <td>
                                 <a href="move_circles.html">Move Circles</a>
                             </td>
@@ -111,7 +122,7 @@
                         </tr>
                         <!-- Inner Disc Hover -->
                         <tr>
-                            <td class="text-center">10</td>
+                            <td class="text-center">12</td>
                             <td>
                                 <a href="inner_disc_hover.html">Inner Disc Hover</a>
                             </td>
@@ -122,7 +133,7 @@
                         </tr>
                         <!-- Difficult Tasks -->
                         <tr>
-                            <td class="text-center">11</td>
+                            <td class="text-center">13</td>
                             <td>
                                 <a href="difficult/index.html">Difficult Tasks</a>
                             </td>
@@ -132,7 +143,7 @@
                         </tr>
 						<!-- Additional Tasks -->
                         <tr>
-                            <td class="text-center">11</td>
+                            <td class="text-center">14</td>
                             <td>
                                 <a href="additional/index.html">Additional Tasks</a>
                             </td>
