add task show message section if

--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -45,8 +45,8 @@
                             </td>
                             <td></td>
                         </tr>
-                         <!-- Hidden Block Click -->
-                         <tr>
+                        <!-- Hidden Block Click -->
+                        <tr>
                             <td class="text-center">3</td>
                             <td>
                                 <a href="hidden_block_click.html">Hidden Block Click</a>
@@ -56,9 +56,20 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Add Border Input -->
+						<!-- Show Message -->
                         <tr>
                             <td class="text-center">4</td>
+                            <td>
+                                <a href="show_message.html">Show Message</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/show_message.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Add Border Input -->
+                        <tr>
+                            <td class="text-center">5</td>
                             <td>
                                 <a href="add_border_input.html">Add Border Input</a>
                             </td>
@@ -69,7 +80,7 @@
                         </tr>
                         <!-- Collabsible -->
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">6</td>
                             <td>
                                 <a href="collabsible.html">Collabsible</a>
                             </td>
@@ -80,7 +91,7 @@
                         </tr>
 						<!-- Move Square Arrow -->
                         <tr>
-                            <td class="text-center">6</td>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="move_square_arrow.html">Move Square Arrow</a>
                             </td>
@@ -91,7 +102,7 @@
                         </tr>
                         <!-- Good Cheap Fast -->
                         <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="good_cheap_fast.html">Good Cheap Fast</a>
                             </td>
@@ -102,7 +113,7 @@
                         </tr>
                         <!-- Guess Number -->
                         <tr>
-                            <td class="text-center">8</td>
+                            <td class="text-center">9</td>
                             <td>
                                 <a href="guess_number.html">Guess Number</a>
                             </td>
@@ -113,7 +124,7 @@
                         </tr>
                         <!-- Guess Color -->
                         <tr>
-                            <td class="text-center">9</td>
+                            <td class="text-center">10</td>
                             <td>
                                 <a href="guess_color.html">Guess Color</a>
                             </td>
