--- a/tasks/timeout/settimeout/index.html
+++ b/tasks/timeout/settimeout/index.html
@@ -23,9 +23,20 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Migalka -->
+						<!-- Show Message -->
                         <tr>
                             <td class="text-center">1</td>
+                            <td>
+                                <a href="show_message.html">Show Message</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/show_message.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Migalka -->
+                        <tr>
+                            <td class="text-center">2</td>
                             <td>
                                 <a href="migalka.html">Migalka</a>
                             </td>
@@ -36,7 +47,7 @@
                         </tr>
                         <!-- Text Typing Effect -->
                         <tr>
-                            <td class="text-center">2</td>
+                            <td class="text-center">3</td>
                             <td>
                                 <a href="text_typing_effect.html">Text Typing Effecct</a>
                             </td>
@@ -47,7 +58,7 @@
                         </tr>
                          <!-- Text Change Color -->
                          <tr>
-                            <td class="text-center">3</td>
+                            <td class="text-center">4</td>
                             <td>
                                 <a href="text_change_color.html">Text Change Color</a>
                             </td>
@@ -58,7 +69,7 @@
                         </tr>
                         <!-- StopWatch -->
                         <tr>
-                            <td class="text-center">4</td>
+                            <td class="text-center">5</td>
                             <td>
                                 <a href="stopwatch.html">StopWatch</a>
                             </td>
@@ -69,7 +80,7 @@
                         </tr>
                         <!-- Loading Bar -->
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">6</td>
                             <td>
                                 <a href="loading_bar.html">Loading Bar</a>
                             </td>
@@ -80,7 +91,7 @@
                         </tr>
                         <!-- Image Slider -->
                         <tr>
-                            <td class="text-center">6</td>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="image_slider.html">Image Slider</a>
                             </td>
@@ -91,7 +102,7 @@
                         </tr>
                         <!-- Fly Catch -->
                         <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="fly_catch.html">Fly Catch</a>
                             </td>
