add task match score section if

--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -89,6 +89,17 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Match Score -->
+                        <tr>
+                            <td class="text-center">7</td>
+                            <td>
+                                <a href="match_score.html">Match Score</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/match_score.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
 						<!-- Move Square Arrow -->
                         <tr>
                             <td class="text-center">7</td>
