add tasks variable

--- a/tasks/index.html
+++ b/tasks/index.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>JavaScript Tasks</title>
+    <title>JavaScript Base - Tasks</title>
 </head>
 <body>
     <div class="container">
         <h1 class="text-center">JavaScript Base - Tasks</h1>
         <div class="row">
                 <div class="col-6 ">
+					<div class="list-group">
+                        <a target="_blank" href="variable/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Variable</a>
+                    </div>
+					<div class="list-group">
+                        <a target="_blank" href="function/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
+                    </div>
                     <div class="list-group">
                         <a target="_blank" href="event/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
                     </div>
@@ -28,11 +34,11 @@
                     <div class="list-group">
                         <a target="_blank" href="if/" class="list-group-item list-group-item-action list-group-item-secondary">If</a>
                     </div>
-                    <div class="list-group">
-                        <a target="_blank" href="array/" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
-                    </div>
                 </div>
                 <div class="col-6 ">
+					<div class="list-group">
+                        <a target="_blank" href="array/" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
+                    </div>
 				    <div class="list-group">
                         <a target="_blank" href="timeout/" class="list-group-item list-group-item-action list-group-item-secondary">Timeout</a>
                     </div>
