add task mobile menu

--- a/tasks/event/additional/index.html
+++ b/tasks/event/additional/index.html
@@ -45,6 +45,17 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Change Color Text -->
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="change_color_text.html">Change Color Text</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_color_text.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
             </table>
         </div>
