--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -25,7 +25,7 @@
                     <tbody>
                         <!-- Change Bg Block -->
                         <tr>
-                            <td class="text-center">2</td>
+                            <td class="text-center">1</td>
                             <td>
                                 <a href="change_bg_block.html">Change Bg Block</a>
                             </td>
@@ -34,20 +34,9 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Change Color Text -->
-                        <tr>
-                            <td class="text-center">3</td>
-                            <td>
-                                <a href="change_color_text.html">Change Color Text</a>
-                            </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/change_color_text.png" alt="">
-                            </td>
-                            <td></td>
-                        </tr>
                         <!-- Open Modal -->
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">2</td>
                             <td>
                                 <a href="open_modal.html">Open Modal</a>
                             </td>
@@ -58,7 +47,7 @@
                         </tr>
 						<!-- Show Message -->
                         <tr>
-                            <td class="text-center">6</td>
+                            <td class="text-center">3</td>
                             <td>
                                 <a href="show_message.html">Show Message</a>
                             </td>
@@ -69,7 +58,7 @@
                         </tr>
                         <!-- Counter Click -->
                         <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">4</td>
                             <td>
                                 <a href="counter_click/index.html">Counter Click</a>
                             </td>
@@ -78,7 +67,7 @@
                         </tr>
 						<!-- Easy Tabs -->
                          <tr>
-                            <td class="text-center">8</td>
+                            <td class="text-center">5</td>
                             <td>
                                 <a href="easy_tabs.html">Easy Tabs</a>
                             </td>
@@ -89,7 +78,7 @@
                         </tr>
                          <!-- Create Figures -->
                          <tr>
-                            <td class="text-center">9</td>
+                            <td class="text-center">6</td>
                             <td>
                                 <a href="create_figures.html">Create Figures</a>
                             </td>
@@ -100,7 +89,7 @@
                         </tr>
                         <!-- Change Size Circle -->
                         <tr>
-                            <td class="text-center">10</td>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="change_size_circle.html">Change Size Circle</a>
                             </td>
@@ -111,7 +100,7 @@
                         </tr>
                         <!-- Move Circles -->
                         <tr>
-                            <td class="text-center">11</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="move_circles.html">Move Circles</a>
                             </td>
@@ -122,7 +111,7 @@
                         </tr>
                         <!-- Inner Disc Hover -->
                         <tr>
-                            <td class="text-center">12</td>
+                            <td class="text-center">9</td>
                             <td>
                                 <a href="inner_disc_hover.html">Inner Disc Hover</a>
                             </td>
@@ -131,9 +120,20 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Mobile Menu -->
+                        <tr>
+                            <td class="text-center">10</td>
+                            <td>
+                                <a href="mobile_menu.html">Mobile Menu</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/mobile_menu.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Difficult Tasks -->
                         <tr>
-                            <td class="text-center">13</td>
+                            <td class="text-center">11</td>
                             <td>
                                 <a href="difficult/index.html">Difficult Tasks</a>
                             </td>
@@ -143,7 +143,7 @@
                         </tr>
 						<!-- Additional Tasks -->
                         <tr>
-                            <td class="text-center">14</td>
+                            <td class="text-center">12</td>
                             <td>
                                 <a href="additional/index.html">Additional Tasks</a>
                             </td>
