move task move square

--- a/tasks/event_object/index.html
+++ b/tasks/event_object/index.html
@@ -34,7 +34,17 @@
                             </td>
                             <td></td>
                         </tr>
-                        
+						<!-- Move Square Arrow -->
+                        <tr>
+                            <td class="text-center">2</td>
+                            <td>
+                                <a href="move_square_arrow.html">Move Square Arrow</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/move_square_arrow.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
             </table>
         </div>
