resizable box form task

--- a/tasks/form/index.html
+++ b/tasks/form/index.html
@@ -34,15 +34,13 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Change Font Size -->
+                        <!-- Range -->
                         <tr>
                             <td class="text-center">2</td>
                             <td>
-                                <a href="change_font_size.html">Change Font Size</a>
+                                <a href="range.html">Range Input</a>
                             </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/change_font_size.png" alt="">
-                            </td>
+                            <td>Задачи input range</td>
                             <td></td>
                         </tr>
                         <!-- Character Counter -->
