add change bg range

--- a/tasks/form/range.html
+++ b/tasks/form/range.html
@@ -45,6 +45,17 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Change Bg -->
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="change_bg_range.html">Change Bg</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_bg_range.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
             </table>
         </div>
