--- a/tasks/form/change_font_size.html
+++ b/tasks/form/change_font_size.html
@@ -33,10 +33,9 @@
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/form/change_font_size/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/19DHwm-kz7tdxtpW9TwwWEopmKXwo9Mfs/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/form/change_font_size" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
-				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
+				<a href="https://priymakvl.github.io/js_tasks/form/change_font_size/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://drive.google.com/file/d/19DHwm-kz7tdxtpW9TwwWEopmKXwo9Mfs/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a href="https://github.com/PriymakVl/js_tasks/tree/main/form/change_font_size" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 			</div>
 		</div>
 	</div>
