--- a/tasks/element/filter_search_bar.html
+++ b/tasks/element/filter_search_bar.html
@@ -23,16 +23,17 @@
 		<div class="col-8 mx-auto">
 			<h2 class="text-center">Задание</h2>
 			<ol class="task">
-				<li>При клике по кнопке должен появляться элемент с сообщением</li>
+				<li>Сделать фильтр слов</li>
+				<li>При вводе в текстовое поле остаются только те слова в которых есть введенные символы</li>
 			</ol>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/element/filter_search_bar/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/15pUoPxOonm9_6cZfit16AkSxdDjJslHt/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://github.com/PriymakVl/js_tasks/tree/main/element/filter_search_bar">Github</a>
+				<a href="https://priymakvl.github.io/js_tasks/element/filter_search_bar/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://drive.google.com/file/d/15pUoPxOonm9_6cZfit16AkSxdDjJslHt/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a class="list-group-item list-group-item-action list-group-item-secondary" href="https://github.com/PriymakVl/js_tasks/tree/main/element/filter_search_bar">Github</a>
 			</div>
 		</div>
 	</div>
