--- a/tasks/attribute/index.html
+++ b/tasks/attribute/index.html
@@ -67,6 +67,17 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Select Color -->
+                        <tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="select_color.html">Select Color</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/select_color.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
