--- a/tasks/event_object/index.html
+++ b/tasks/event_object/index.html
@@ -45,6 +45,17 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Select Color -->
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="select_color.html">Select Color</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/select_color.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
             </table>
         </div>
