add task simple lightbox

--- a/tasks/attribute/index.html
+++ b/tasks/attribute/index.html
@@ -78,6 +78,17 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Simple Lightbox -->
+                        <tr>
+                            <td class="text-center">6</td>
+                            <td>
+                                <a href="simple_lightbox.html">Simple Lightbox</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/simple_lightbox.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
