change task filter tabs

--- a/array/filter-tabs/index.html
+++ b/array/filter-tabs/index.html
@@ -17,18 +17,14 @@
   </div>
 
   <div class="content">
-    <img class="nature" src="img/nature1.jpg" >
-    <img class="nature" src="img/nature2.jpg" >
-    <img class="car" src="img/car1.jpg" >
-    <img class="car" src="img/car2.jpg" >
+    <img alt="nature" src="img/nature1.jpg" >
+    <img alt="nature" src="img/nature2.jpg" >
+    <img alt="car" src="img/car1.jpg" >
+    <img alt="car" src="img/car2.jpg" >
   </div>
 </div>
   
-<div class="modal">
-    <button id="close">X</button>
-    <img src="img/nature1.jpg" alt="">
-</div>
-  
+
 <script src="script.js"></script>
 </body>
 </html>
