--- a/tasks/array/filter_tabs.html
+++ b/tasks/array/filter_tabs.html
@@ -26,18 +26,16 @@
 			<ol class="task">
 				<li>Написать скрипт для фильтрации изображений</li>
 				<li>При кнопке показывать часть изображений по названию на кнопке</li>
-				<li>При клике по изобажению показвать его в отдельном окне</li>
-				<li>Окно закрывается при клике на кнопку</li>
 			</ol>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/array/filter-tabs//" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/16mfpVypeUtJGYgjT082X-a6RcGEsltZs/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/array/filter-tabs/" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
-				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
+				<a href="https://priymakvl.github.io/js_tasks/array/filter-tabs//" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://drive.google.com/file/d/1QKl-1pLuoBhKAnrlFaaC4gx3sHw2kS-8/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a href="https://drive.google.com/file/d/18ZwNRmCzLRREUPPXatWETwf3emmnLWQ6/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Код CSS</a>
+				<a href="https://github.com/PriymakVl/js_tasks/tree/main/array/filter-tabs/" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 			</div>
 		</div>
 	</div>
