add task this btn click

--- a/tasks/index.html
+++ b/tasks/index.html
@@ -12,52 +12,57 @@
     <div class="container">
         <h1 class="text-center">JavaScript Base - Tasks</h1>
         <div class="row">
-                <div class="col-6 ">
-					<div class="list-group">
-                        <a target="_blank" href="variable/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Variable</a>
-                    </div>
-					<div class="list-group">
-                        <a target="_blank" href="function/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="event/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
-                    </div>
-					<div class="list-group">
-                        <a target="_blank" href="event_object/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event Object</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="attribute/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Attribute</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="form/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="if/" class="list-group-item list-group-item-action list-group-item-secondary">If</a>
-                    </div>
-                </div>
-                <div class="col-6 ">
-					<div class="list-group">
-                        <a target="_blank" href="array/" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
-                    </div>
-				    <div class="list-group">
-                        <a target="_blank" href="timeout/" class="list-group-item list-group-item-action list-group-item-secondary">Timeout</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="date/" class="list-group-item list-group-item-action list-group-item-secondary">Date</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="loop/" class="list-group-item list-group-item-action list-group-item-secondary">Loop</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="class_list/" class="list-group-item list-group-item-action list-group-item-secondary">clasList</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="element/" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
-                    </div>
-                    <div class="list-group">
-                        <a target="_blank" href="scroll/" class="list-group-item list-group-item-action list-group-item-secondary">Scroll</a>
-                    </div>
-                </div>
+			<div class="col-4 ">
+				<div class="list-group">
+					<a target="_blank" href="variable/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Variable</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="function/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Function</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="event/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="this/index.html" class="list-group-item list-group-item-action list-group-item-secondary">This</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="attribute/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Attribute</a>
+				</div>
+			</div>
+			<div class="col-4 ">
+				<div class="list-group">
+					<a target="_blank" href="form/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Form</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="if/" class="list-group-item list-group-item-action list-group-item-secondary">If</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="event_object/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event Object</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="array/" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="timeout/" class="list-group-item list-group-item-action list-group-item-secondary">Timeout</a>
+				</div>
+			</div>
+			<div class="col-4">
+				<div class="list-group">
+					<a target="_blank" href="date/" class="list-group-item list-group-item-action list-group-item-secondary">Date</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="loop/" class="list-group-item list-group-item-action list-group-item-secondary">Loop</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="class_list/" class="list-group-item list-group-item-action list-group-item-secondary">clasList</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="element/" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
+				</div>
+				<div class="list-group">
+					<a target="_blank" href="scroll/" class="list-group-item list-group-item-action list-group-item-secondary">Scroll</a>
+				</div>
+			</div>
         </div>
     </div>
 </body>
