add task rise item

--- a/tasks/this/index.html
+++ b/tasks/this/index.html
@@ -33,6 +33,16 @@
                             </td>
                             <td></td>
                         </tr>
+						<tr>
+                            <td class="text-center">2</td>
+                            <td>
+                                <a href="rise_item.html">Rise Item</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/rise_item.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
             </table>
         </div>
