change index page

--- a/tasks/index.html
+++ b/tasks/index.html
@@ -43,7 +43,7 @@
 					<a target="_blank" href="array/" class="list-group-item list-group-item-action list-group-item-secondary">Array</a>
 				</div>
 				<div class="list-group">
-					<a target="_blank" href="timeout/" class="list-group-item list-group-item-action list-group-item-secondary">Timeout</a>
+					<a target="_blank" href="timeout/" class="list-group-item list-group-item-action list-group-item-secondary">setTimeout & setInterval</a>
 				</div>
 			</div>
 			<div class="col-4">
