change task change img list

--- a/properties/change_img_list/index.html
+++ b/properties/change_img_list/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<ul class="list">
-    <li data-src="img/first.avif">First</li>
-    <li data-src="img/second.avif">Second</li>
-    <li data-src="img/third.avif">Third</li>
-</ul>
+<div class="list">
+    <div data-file="cat.jpg" id="cat">Cat</div>
+    <div data-file="dog.jpg" id="dog">Dog</div>
+    <div data-file="mouse.jpg" id="mouse">Mouse</div>
+</div>
 
-<img src="img/first.avif">
+<img src="img/cat.jpg">
 
     <script src="script.js"></script>
 </body>
