--- a/tasks/attribute/change_img_list.html
+++ b/tasks/attribute/change_img_list.html
@@ -25,16 +25,17 @@
 			<h2 class="text-center">Задание</h2>
 			<ol class="task">
 				<li>При клике по пункту изменять изображение</li>
+				<li>Выделить цветом активный пункт навигации</li>
 			</ol>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/properties/change_img_list/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/10iJiLCT8jdWFlNdmoVS41mnkHIlV8lQ6/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/properties/change_img_list" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
-				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
+				<a href="https://priymakvl.github.io/js_tasks/properties/change_img_list/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://drive.google.com/file/d/10iJiLCT8jdWFlNdmoVS41mnkHIlV8lQ6/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a href="https://drive.google.com/file/d/1Yd6c_WjEdzrCUxXl4K8cbMLZokTwU4gq/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка (CSS)</a>
+				<a href="https://github.com/PriymakVl/js_tasks/tree/main/properties/change_img_list" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 			</div>
 		</div>
 	</div>
