--- a/tasks/this/rise_item.html
+++ b/tasks/this/rise_item.html
@@ -31,7 +31,7 @@
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a href="https://priymakvl.github.io/js_tasks/this/При клике по квадрату он должен подняться, а остальные опуститься/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://priymakvl.github.io/js_tasks/this/https://priymakvl.github.io/js_tasks/this/rise_item/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
 				<a href="https://drive.google.com/file/d/1rIUJV-Rqbjhq_zwJkxVbp2yv15kXu_P3/view?usp=drive_link" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
 				<a href="https://drive.google.com/file/d/17vhVYH67f5BEEPpS0s4uT1DwOxEFUHHD/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Код CSS</a>
 				<a href="https://github.com/PriymakVl/js_tasks/tree/main/this/rise_item" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
