--- a/tasks/event_object/move_square_arrow.html
+++ b/tasks/event_object/move_square_arrow.html
@@ -31,9 +31,9 @@
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/if/move_square_arrow/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/1i0KWb9_6_aBWrERCtv81p18IQ18I2QXy/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/if/move_square_arrow" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
+				<a href="https://priymakvl.github.io/js_tasks/event_object/move_square_arrow/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://drive.google.com/file/d/1i0KWb9_6_aBWrERCtv81p18IQ18I2QXy/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a href="https://github.com/PriymakVl/js_tasks/tree/main/event_object/move_square_arrow" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 			</div>
 		</div>
 	</div>
