change task key code

--- a/tasks/event_object/show_key_codes.html
+++ b/tasks/event_object/show_key_codes.html
@@ -30,9 +30,10 @@
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/event_object/show_key_codes/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/1zDTrdSQvwODeV5gxJSRxhw3BvaO5K2zh/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://github.com/PriymakVl/js_tasks/tree/main/event_object/event_key_codes">Github</a>
+				<a href="https://priymakvl.github.io/js_tasks/event_object/show_key_codes/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a href="https://drive.google.com/file/d/1B88QWb_44Oh6wFKL13TfYsbnc0rsJJqG/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a href="https://drive.google.com/file/d/1UJpH_lJp8rG1kMiRy1MlU73PD0wuwpt-/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка (CSS)</a>
+				<a class="list-group-item list-group-item-action list-group-item-secondary" href="https://github.com/PriymakVl/js_tasks/tree/main/event_object/event_key_codes">Github</a>
 			</div>
 		</div>
 	</div>
